all pages scale, scaling needs some fine tuning

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,27 +1,31 @@
-<div class="col-md-8 col-md-offset-2 card ">
-<h2>Our Mission</h2>
+<div class="row">
+  <div class="padding-bot col-md-8 col-md-offset-2">
+    <div class="card">
+        <h2>Our Mission</h2>
 
-<p>The mission of Phi Kappa Tau is to champion a lifelong commitment to brotherhood, learning, ethical leadership and
-   exemplary character.</p>
+        <p>The mission of Phi Kappa Tau is to champion a lifelong commitment to brotherhood, learning, ethical leadership and
+           exemplary character.</p>
 
-<h2>Our Vision</h2>
+        <h2>Our Vision</h2>
 
-<p>The vision of Phi Kappa Tau is to be recognized as a leadership organization that binds men together and challenges
-   them to improve their campuses and the world.</p>
+        <p>The vision of Phi Kappa Tau is to be recognized as a leadership organization that binds men together and challenges
+           them to improve their campuses and the world.</p>
 
-<h2>Our Creed</h2>
+        <h2>Our Creed</h2>
 
-<p>Phi Kappa Tau,</p>
-<p>by admitting me to membership, has conferred upon me a mark of distinction in which I take just pride.</p>
-<p>I believe in the spirit of brotherhood for which it stands.</p>
-<p>I shall strive to attain its ideals, and by so doing to bring to it honor and credit.</p>
-<p>I shall be loyal to my college and my chapter and shall keep strong my ties to them that I may ever retain the
-    spirit of youth.
-</p><p>I shall be a good and loyal citizen.</p>
-<p>I shall try always to discharge the obligation to others which arises from the fact that I am a fraternity man.</p>
+        <p>Phi Kappa Tau,</p>
+        <p>by admitting me to membership, has conferred upon me a mark of distinction in which I take just pride.</p>
+        <p>I believe in the spirit of brotherhood for which it stands.</p>
+        <p>I shall strive to attain its ideals, and by so doing to bring to it honor and credit.</p>
+        <p>I shall be loyal to my college and my chapter and shall keep strong my ties to them that I may ever retain the
+            spirit of youth.
+        </p><p>I shall be a good and loyal citizen.</p>
+        <p>I shall try always to discharge the obligation to others which arises from the fact that I am a fraternity man.</p>
 
-<br>
-<p>Roland Maxwell, Southern California 1922</p>
+        <br>
+        <p>Roland Maxwell, Southern California 1922</p>
 
-<p>November 19, 1950</p>
+        <p>November 19, 1950</p>
+    </div>
+  </div>
 </div>
