--- a/app/views/static_pages/information_for_students.html.erb
+++ b/app/views/static_pages/information_for_students.html.erb
@@ -1,6 +1,15 @@
-<h1>Check out some of facts about us Nationaly and Localy!</h1>
+<div class="row">
+  <div class="padding-bot col-md-8 col-md-offset-2">
+    <div class="card">
+      <h1>Check out some of facts about us Nationaly and Localy!</h1>
 
-<h2><%= link_to "Nation History", national_history_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
-<h2><%= link_to "National Fast Facts", national_fast_facts_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
-<h2><%= link_to "Local History", local_history_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
-<h2><%= link_to "Local Fast Facts", local_fast_facts_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
+      <h2><%= link_to "Nation History", national_history_path, class: "nav-item"%></h2>
+      <h2><%= link_to "National Fast Facts", national_fast_facts_path, class: "nav-item" %></h2>
+      <h2><%= link_to "Local History", local_history_path, class: "nav-item"%></h2>
+      <h2><%= link_to "Local Fast Facts", local_fast_facts_path, class: "nav-item" %></h2>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+<br>
