--- a/app/views/static_pages/local_fast_facts.html.erb
+++ b/app/views/static_pages/local_fast_facts.html.erb
@@ -1,56 +1,68 @@
-<div class="card">
-RIT Awards
+<div class="row">
+  <div class="padding-bot col-md-6 col-md-offset-3">
+    <div class="card">
+      <h4>RIT Awards</h4>
+      <ul>
+        <li>1968 – Greek Football Trophy – 6-0-1</li>
+        <li>1974 – Greek Basketball Trophy</li>
+        <li>1978 – All Greek Sports Trophies</li>
+        <li>1979 – All Greek Sports Trophies</li>
+        <li>1980 – All Greek Sports Trophies, Outstanding Greek Chapter at RIT</li>
+        <li>1982 – 1983 – Outstanding Community Service</li>
+        <li>1985 – 1986 – Sportsmanship Trophy</li>
+        <li>1985 – 1986 – James Neri was named Outstanding Greek Man On Campus</li>
+        <li>1990 – Outstanding Greek Chapter at RIT</li>
+        <li>2009 - 2010 - Chapter Excellence in Chapter and Risk Management</li>
+        <li>2010 - 2011 - Chapter Excellence in Chapter and Risk Management</li>
+      </ul>
 
-1968 – Greek Football Trophy – 6-0-1
-1974 – Greek Basketball Trophy
-1978 – All Greek Sports Trophies
-1979 – All Greek Sports Trophies
-1980 – All Greek Sports Trophies, Outstanding Greek Chapter at RIT
-1982 – 1983 – Outstanding Community Service
-1985 – 1986 – Sportsmanship Trophy
-1985 – 1986 – James Neri was named Outstanding Greek Man On Campus
-1990 – Outstanding Greek Chapter at RIT
-2009 - 2010 - Chapter Excellence in Chapter and Risk Management
-2010 - 2011 - Chapter Excellence in Chapter and Risk Management
-National Awards
+      <h4>National Awards</h4>
+      <ul>
+        <li>1975 – Angelo Award</li>
+        <li>1976 – Massock Award</li>
+        <li>1977 – Administrative Excellence</li>
+        <li>1978 – Administrative Excellence, Angelo Award</li>
+        <li>1978 – David Arlington wins the Shideler Award</li>
+        <li>1978 – G. Christopher Belle-Ilses recognized with Dr. Edgar Ewing Brandon Award</li>
+        <li>1981 – Administrative Excellence, Maxwell – Division II</li>
+        <li>1983 – Administrative Excellence, Maxwell – Division II</li>
+        <li>1984 – Administrative Excellence, Gary Gasper recognized with Dr. Edgar Ewing Brandon Award</li>
+        <li>1985 – Administrative Excellence, Maxwell – Division II</li>
+        <li>1986 – Gary Gasper wins Phi Award</li>
+        <li>1989 – Administrative Excellence</li>
+        <li>1992 – Tim Irwin wins Phi Award</li>
+        <li>1995 – Father James Sauers recognized with Dr. Edgar Ewing Brandon Award</li>
+        <li>1999 – Administrative Excellence</li>
+        <li>2000 – Gary Gasper recognized with Dr. Edgar Ewing Brandon Award, Thomas R. Steele wins Phi Award</li>
+        <li>2002 – Gary Proud wins Phi Award</li>
+        <li>2005 – Massock Award</li>
+        <li>2007 – Administrative Excellence</li>
+        <li>2009 – Administrative Excellence, Most Improved Chapter</li>
+        <li>2011 - Phil Frandina wins Shideler Award</li>
+      </ul>
 
-1975 – Angelo Award
-1976 – Massock Award
-1977 – Administrative Excellence
-1978 – Administrative Excellence, Angelo Award, David Arlington wins the Shideler Award, G. Christopher Belle-Ilses recognized with Dr. Edgar Ewing Brandon Award
-1981 – Administrative Excellence, Maxwell – Division II
-1983 – Administrative Excellence, Maxwell – Division II
-1984 – Administrative Excellence, Gary Gasper recognized with Dr. Edgar Ewing Brandon Award
-1985 – Administrative Excellence, Maxwell – Division II
-1986 – Gary Gasper wins Phi Award
-1989 – Administrative Excellence
-1992 – Tim Irwin wins Phi Award
-1995 – Father James Sauers recognized with Dr. Edgar Ewing Brandon Award
-1999 – Administrative Excellence
-2000 – Gary Gasper recognized with Dr. Edgar Ewing Brandon Award, Thomas R. Steele wins Phi Award
-2002 – Gary Proud wins Phi Award
-2005 – Massock Award
-2007 – Administrative Excellence
-2009 – Administrative Excellence, Most Improved Chapter
-2011 - Phil Frandina wins Shideler Award
-Phi Kappa Tau National Hall of Fame Members
+      <h4>Phi Kappa Tau National Hall of Fame Members</h4>
+      <ul>
+        <li>2008 – Gary Proud</li>
+        <li>2008 – Stan McKenzie</li>
+      </ul>
 
-2008 – Gary Proud
-2008 – Stan McKenzie
-Gamma Nu Legacies
-
-Paul and Steve Clark
-Chris and Richard Miller
-Cosmo and Dameon Tedone
-Jay and Dave Berry
-Dave Updike, his Father and his Grandfather
-Greg and Matt Forbaugh
-Jim and Tom Perry
-Chris and John Harris
-Paul and Mike Hemmer
-Dominick and Anthony Perritano
-Jobeth and John Bowers
-Steve Nims and Rob Sauda
-Emmett and Jackson Coakley
-
+      <h4>Gamma Nu Legacies</h4>
+        <ul>
+          <li>Paul and Steve Clark</li>
+          <li>Chris and Richard Miller</li>
+          <li>Cosmo and Dameon Tedone</li>
+          <li>Jay and Dave Berry</li>
+          <li>Dave Updike, his Father and his Grandfather</li>
+          <li>Greg and Matt Forbaugh</li>
+          <li>Jim and Tom Perry</li>
+          <li>Chris and John Harris</li>
+          <li>Paul and Mike Hemmer</li>
+          <li>Dominick and Anthony Perritano</li>
+          <li>Jobeth and John Bowers</li>
+          <li>Steve Nims and Rob Sauda</li>
+          <li>Emmett and Jackson Coakley</li>
+      </ul>
+    </div>
+  </div>
 </div>
