--- a/app/views/static_pages/local_history.html.erb
+++ b/app/views/static_pages/local_history.html.erb
@@ -1,20 +1,39 @@
-<div class="card">
-Kappa Phi Omega was born on November 19, 1962, to increase the Greek opportunities for men at Rochester Institute of Technology. It was founded by a dedicated group of freshman Business Majors intent on offering the benefits of fraternal life to young men on campus. Rejecting the negative hazing practices so prevalent at the time, they pursued a positive approach to camaraderie and fellowship. The Founding fathers of Kappa Phi Omega are:
+<div class="row">
+  <div class="padding-bot col-md-6 col-md-offset-3">
+    <div class="card">
+      <p>Kappa Phi Omega was born on November 19, 1962, to increase the Greek opportunities for men at Rochester
+        Institute of Technology. It was founded by a dedicated group of freshman Business Majors intent on offering the
+        benefits of fraternal life to young men on campus. Rejecting the negative hazing practices so prevalent at the
+        time, they pursued a positive approach to camaraderie and fellowship. The Founding fathers of Kappa Phi Omega
+        are:</p>
+        <ul>
+          <li>Bob Mitchell</li>
+          <li>Howard Beck*</li>
+          <li>Ron Sick</li>
+          <li>John Helms</li>
+          <li>Gary Proud</li>
+        </ul>
+        <p>The fraternity set about recruiting new members and becoming involved in campus activities. By 1964-65 Kappa
+          Phi Omega captured top scholarship honors among fraternities, and acquired and improved a Chapter House on
+          the old campus at 141 S. Plymouth Ave., in downtown Rochester, NY.</p>
 
-Bob Mitchell
-Howard Beck*
-Ron Sick
-John Helms
-Gary Proud
-The fraternity set about recruiting new members and becoming involved in campus activities. By 1964-65 Kappa Phi Omega captured top scholarship honors among fraternities, and acquired and improved a Chapter House on the old campus at 141 S. Plymouth Ave., in downtown Rochester, NY.
+        <p>That year also witnessed the group's affiliation with the Phi Kappa Tau Fraternity, and upon completing all
+          of the charting requirements, Kappa Phi Omega was installed as Gamma Nu Chapter of Phi Kappa Tau on April 2,
+          1966 - the 85th Chapter at that time. At two o'clock that afternoon, the Chapter hosted a charter signing
+          ceremony and reception at the Chapter House for members of the RIT faculty and administration, other
+          fraternities, and Phi Tau dignitaries.</p>
 
-That year also witnessed the group's affiliation with the Phi Kappa Tau Fraternity, and upon completing all of the charting requirements, Kappa Phi Omega was installed as Gamma Nu Chapter of Phi Kappa Tau on April 2, 1966 - the 85th Chapter at that time. At two o'clock that afternoon, the Chapter hosted a charter signing ceremony and reception at the Chapter House for members of the RIT faculty and administration, other fraternities, and Phi Tau dignitaries.
+        <p>At Eddie's Chop House, a local banquet hall at the time, that evening, Chapter President Gary Proud formally
+          accepted the Gamma Nu charter from National President Lou Gerding, who then spoke of the importance of the
+          college fraternity system to college campuses across the nation.</p>
 
-At Eddie's Chop House, a local banquet hall at the time, that evening, Chapter President Gary Proud formally accepted the Gamma Nu charter from National President Lou Gerding, who then spoke of the importance of the college fraternity system to college campuses across the nation.
+         <p>When the RIT campus moved from downtown Rochester to its suburban campus in 1968, the fraternities gave
+           up their historic Victorian Houses for modern on-campus residences. Gamma Nu''s new home was in the
+           prominent building opposite the Southwest corner of the Sun Dial, the center of student residential life.</p>
 
-When the RIT campus moved from downtown Rochester to its suburban campus in 1968, the fraternities gave up their historic Victorian Houses for modern on-campus residences. Gamma Nu''s new home was in the prominent building opposite the Southwest corner of the Sun Dial, the center of student residential life.
+         <p>In 2001 RIT opened six new free-standing mansions where Gamma Nu was relocated to and where it remains today.</p>
 
-In 2001 RIT opened six new free-standing mansions where Gamma Nu was relocated to and where it remains today.
-
-*Howard Beck didn't sign the Gamma Nu Charter as he choose not to be initiated into Phi Kappa Tau
+        <p><i>*Howard Beck didn't sign the Gamma Nu Charter as he choose not to be initiated into Phi Kappa Tau</i></p>
+    </div>
+  </div>
 </div>
