--- a/app/views/static_pages/national_fast_facts.html.erb
+++ b/app/views/static_pages/national_fast_facts.html.erb
@@ -1,27 +1,31 @@
-<div class="card">
-  National Headquarters:
-5221 Morning Sun Road, Oxford, Ohio 45056
-(800) PKT-1906 or (513) 523-4193
+<div class="row">
+  <div class="padding-bot col-md-6 col-md-offset-3">
+    <div class="card">
+      <p>National Headquarters:</p>
+      <p>5221 Morning Sun Road, Oxford, Ohio 45056</p>
+      <p>(800) PKT-1906 or (513) 523-4193</p>
 
-Founded:
+<p>Founded:</p>
 
-March 17, 1906, at Miami University in Oxford, Ohio
-Membership:
+<p>March 17, 1906, at Miami University in Oxford, Ohio</p>
+<p>Membership:</p>
 
-146 chapters chartered since 1906
-82 active chapters
-3 colonies
-Approximately 3,200 undergraduate members
-More than 82,000 initiates
-Largest concentration of alumni: Louisville; Cincinnati; Houston; Chicago; Cleveland; Atlanta; Seattle; Denver; Columbus, Ohio; and Lincoln, Neb.
-Foundation:
+      <p>146 chapters chartered since 1906</p>
+      <p>82 active chapters</p>
+      <p>3 colonies</p>
+      <p>Approximately 3,200 undergraduate members</p>
+      <p>More than 82,000 initiates</p>
+      <p>Largest concentration of alumni: Louisville; Cincinnati; Houston; Chicago; Cleveland; Atlanta; Seattle; Denver; Columbus, Ohio; and Lincoln, Neb.</p>
+      <p>Foundation:</p>
 
-Incorporated as an Ohio not-for-profit in 1945
-Asset base exceeds $10 million
-National Magazine:
+      <p>Incorporated as an Ohio not-for-profit in 1945</p>
+      <p>Asset base exceeds $10 million</p>
+      <p>National Magazine:</p>
 
-The Laurel
-National Philanthropy:
+      <p>The Laurel</p>
+      <p>National Philanthropy:</p>
 
-Serious Fun Network (formerly the Hole in the Wall Camps)
+      <p>Serious Fun Network (formerly the Hole in the Wall Camps)</p>
     </div>
+  </div>
+</div>
