--- a/app/views/static_pages/national_history.html.erb
+++ b/app/views/static_pages/national_history.html.erb
@@ -1,13 +1,36 @@
-<div class="card">
-  Phi Kappa Tau was founded on March 17, 1906, in the Union Literary Society Hall of Miami University's Old Main Building in Oxford, Ohio. The four honored founders are:
+<div class="row">
+  <div class="padding-bot col-md-6 col-md-offset-3">
+    <div class="card">
+      <p>Phi Kappa Tau was founded on March 17, 1906, in the Union Literary Society Hall of Miami University's Old Main
+        Building in Oxford, Ohio.</p>
+      <p>The four honored founders are:</p>
+      <ul>
+        <li>Taylor Albert Borradaile</li>
+        <li>Clinton Dewitt Boyd</li>
+        <li>Dwight Ireneus Douglass</li>
+        <li>William Henry Shideler</li>
+      </ul>
+      <br>
 
-Taylor Albert Borradaile
-Clinton Dewitt Boyd
-Dwight Ireneus Douglass
-William Henry Shideler
-There were 21 men who attended the first meeting and they hoped to establish themselves on campus by unifying. They agreed on the name Non-Fraternity Association because according to Founder Shideler, “A political combination of fraternities had taken charge of essentially all activities within the reach of the student body.”
+      <p>There were 21 men who attended the first meeting and they hoped to establish themselves on campus by unifying.
+       They agreed on the name Non-Fraternity Association because according to Founder Shideler, “A political combination
+      of fraternities had taken charge of essentially all activities within the reach of the student body.”</p>
 
-Three years later, on March 6, 1909, the organization changed its name to Phrenocon, combining the proposed names, Friends, Non-Fraternity, and Comrades. Phrenocon expanded in 1911 when a second chapter formed at Ohio University. Additional chapters were established at Ohio State University, Centre College, Mount Union College and the University of Illinois.
-/
-On March 9, 1916, the Miami chapter withdrew from the National Phrenocon in order to become a Greek-letter fraternity. They adopted the name Phi Kappa Tau, and the remaining five Phrenocon chapters agreed to the name change in December of that year. The Miami chapter was then invited to return to the national organization as the Alpha chapter of Phi Kappa Tau.
+      <p>Three years later, on March 6, 1909, the organization changed its name to Phrenocon, combining the proposed names,
+      Friends, Non-Fraternity, and Comrades.</p>
+      <p>Phrenocon expanded in 1911 when a second chapter formed at Ohio University. Additional chapters were established at</p>
+
+      <ul>
+        <li>Ohio State University</li>
+        <li>Centre College</li>
+        <li>Mount Union College</li>
+        <li>University of Illinois</li>
+      </ul>
+      <br>
+      <p>On March 9, 1916, the Miami chapter withdrew from the National Phrenocon in order to become a Greek-letter
+        fraternity. They adopted the name Phi Kappa Tau, and the remaining five Phrenocon chapters agreed to the name
+        change in December of that year. The Miami chapter was then invited to return to the national organization as the
+        Alpha chapter of Phi Kappa Tau.</p>
+    </div>
+  </div>
 </div>
