--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 $HarvardRed: #5e0000;
 $White: #FFFFFF;
+$Black: #000000;
 $FooterBackground: #161817;
 $H1_header: 3rem;
 $H3_header: 1.7rem;
@@ -80,8 +81,10 @@ a:hover{
   padding-bottom: 1rem;
 }
 
-.footer{
+.footer {
   background-color: $FooterBackground;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 //End of the footer
 //Home Page
@@ -119,7 +122,16 @@ a:hover{
   width: 50%;
   padding-left: 20px;
 }
-//
+
+.padding-bot{
+  padding-bottom: 3rem;
+}
+//text changes
+.black_h2{
+  color: $Black;
+}
+
+
 //text alignment
 
 body {
@@ -141,6 +153,7 @@ body {
   animation:fly-in-from-left .5s 1s ease both;
   transform-origin:top left;
   margin: 0 auto;
+  padding-bottom: 3rem;
 }
 
 hr {
@@ -149,7 +162,7 @@ hr {
   margin: 1em 0; padding: 0;
 }
 
-
+//Flipping Cards
 
 
 .flipping-cards li{position:relative; float:left; margin-right:10px;}
