fixed bootstrap issue, header needs a little more work though

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,7 +138,12 @@ a:hover{
 .black_h2{
   color: $Black;
 }
-
+//body
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+//end body
 
 //text alignment
 
