--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,14 @@ $grid-float-breakpoint: $screen-md-min;
   display: inline-block;
 }
 
+.navbar-nav
+{
+  width: 50%;
+  position: absolute;
+  top: 38px;
+  right: 10px;
+}
+
 //Div Display for Phi Kappa Tau \n Learning Leading Serving
 //Widith allows text to be seen in line on half the screen
 //inline-block and vertical middle help center the image and text
@@ -64,6 +72,18 @@ $grid-float-breakpoint: $screen-md-min;
   vertical-align: middle;
   width: 50%;
 }
+
+@media only screen and (min-device-width: 768px)
+{
+  .navbar-header
+  {
+    width:100% !important;
+  }
+}
+.container-fluid > .navbar-collapse
+{
+}
+
 .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
   display: inline-block;
   vertical-align: middle;
@@ -385,3 +405,5 @@ ________________________________________*/
   width: 60%;
   margin: 0 auto;
 }
+
+
