--- a/app/views/text_messages/_form.html.erb
+++ b/app/views/text_messages/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :to_number %><br>
-    <%= f.text_field :to_number %>
+    <%= f.text_field :to_number, value: params[:to_number] %>
   </div>
   <div class="field">
     <%= f.label :user_group %><br>
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :message %><br>
-    <%= f.text_field :message %>
+    <%= f.text_field :message, value: params[:message] %>
   </div>
   <div class="actions">
     <%= f.submit %>
