--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,31 @@
-<div class="card_registration">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  <div class="registration_space">
-    <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name" %>
-    <%= f.text_field :last_name, :placeholder => "Last Name" %>
-  </div>
-  <div style="float: none; clear:both;"> </div>
-
-  <div class="registration_space">
-    <%= f.password_field :password, autocomplete: "off", :placeholder => "Password" %>
-    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Password Confirmation" %>
-  </div>
-  <div style="float: none; clear:both;"> </div>
-
-  <div class="registration_space">
-    <%= f.email_field :email,  :placeholder => "Email" %>
-    <%= f.collection_select :role, User::SIGNUPROLES, :to_s, :to_s %>
-  <div style="float: none; clear:both;"> </div>
-
-  <br>
-    <div class="registration_space"><%= recaptcha_tags %></div>
-  <br>
-
-  <center><%= f.submit "Sign up" %></center>
-<% end %>
-</div>
+<div class="col-md-6 col-md-offset-3 row">
+  <div class="card_registration" align="center">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    <div class="registration_space">
+      <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name" %>
+      <%= f.text_field :last_name, :placeholder => "Last Name" %>
     </div>
+    <div style="float: none; clear:both;"> </div>
+
+    <div class="registration_space">
+      <%= f.password_field :password, autocomplete: "off", :placeholder => "Password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Password Confirmation" %>
+    </div>
+    <div style="float: none; clear:both;"> </div>
+
+    <div class="registration_space">
+      <%= f.email_field :email,  :placeholder => "Email" %>
+      <%= f.collection_select :role, User::SIGNUPROLES, :to_s, :to_s %>
+      <div style="float: none; clear:both;"> </div>
+
+      <br>
+        <div class="registration_space"><%= recaptcha_tags %></div>
+      <br>
+
+      <%= f.submit "Sign up" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
