--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,15 @@
 <body>
   <%= render 'layouts/header' %>
 
-  <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-  <% end %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
   <%= yield %>
   <!--<div class="row" style="height: 3rem"></div>-->
 
 </body>
 
-<%= render 'layouts/footer' %>
+<!--<%= render 'layouts/footer' %>-->
 </html>
 
 
