--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,31 @@
-<div class="col-md-6 col-md-offset-3 row">
-  <div class="card_registration" align="center">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="col-md-6 center-block row">
+  <div class="card_registration">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
     <%= devise_error_messages! %>
     <div class="registration_space">
-      <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name" %>
-      <%= f.text_field :last_name, :placeholder => "Last Name" %>
+      <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name", :class => "col-md-3" %>
+      <%= f.text_field :last_name, :placeholder => "Last Name",:class => "col-md-3" %>
     </div>
     <div style="float: none; clear:both;"> </div>
 
     <div class="registration_space">
-      <%= f.password_field :password, autocomplete: "off", :placeholder => "Password" %>
-      <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Password Confirmation" %>
+      <%= f.password_field :password, autocomplete: "off", :placeholder => "Password", :class => "col-md-3" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Password Confirmation", :class => "col-md-3" %>
     </div>
     <div style="float: none; clear:both;"> </div>
 
     <div class="registration_space">
-      <%= f.email_field :email,  :placeholder => "Email" %>
-      <%= f.collection_select :role, User::SIGNUPROLES, :to_s, :to_s %>
+      <%= f.email_field :email,  :placeholder => "Email", :class => "col-md-3" %>
+      <%= f.collection_select :role, User::SIGNUPROLES, :to_s, :to_s, :class => "col-md-3" %>
       <div style="float: none; clear:both;"> </div>
 
       <br>
-        <div class="registration_space"><%= recaptcha_tags %></div>
+        <div class="col-md-6 col-md-offset-3 registration_space"><%= recaptcha_tags %></div>
       <br>
 
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Sign up", :class => "col-md-6 col-md-offset-3" %>
       <% end %>
+    <br>
     </div>
   </div>
 </div>
-
