--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,24 +42,9 @@
         <% if user_signed_in?%>
           <li><%= link_to "Sign-out", destroy_user_session_path, :method => :delete, class: "nav-item" %></li>
         <% else %>
-          <li><a class="nav-item" href="#openModal">Sign-In</a></li>
+            <li><%= link_to "Sign-in", new_user_session_path, class: "nav-item" %>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-<div id="openModal" class="modalDialog">
-  <div style="margin-left: auto; margin-right: auto;">
-    <a href="#close" title="Close" class="close">X</a>
-    <%= form_for(:user, :url => session_path(:user)) do |f| %>
-        <div style="padding: 20px 10px 0px 10px"><%= f.text_field :email, :placeholder => "email", :tabindex => 1 %></div>
-        <div style="padding: 20px 10px 0px 10px"><%= f.password_field :password, :placeholder => "Password", :tabindex => 2%></div>
-        <div style="float: left; padding: 20px 0px 0px 10px"><%= f.submit 'Sign in', :tabindex => 3 %></div>
-        <div style="float: left; padding: 23px 50px 0px 15px; font-size: 20px" ><%= link_to "Sign up", new_user_registration_path, "data-no-turbolink" => true %></div>
-        <div style="float: none; clear:both;"> </div>
-    <% end %>
-  </div>
-</div>
-
-<script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
