--- a/app/views/text_messages/_form.html.erb
+++ b/app/views/text_messages/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :user_group %><br>
-    <%= f.text_field :user_group %>
+    <%= f.collection_select :user_group, User::SIGNUPROLES, :to_s, :to_s, :class => "col-md-3" %>
   </div>
   <div class="field">
     <%= f.label :message %><br>
