--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-<div class="card col-md-6 col-md-offset-3">
+<div class="col-md-6 center-block row">
+  <div class="card">
   <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
     <div class="user_img">
       <%= image_tag @user.profile_picture, :class => "user_img" if @user.profile_picture? %>
@@ -31,3 +32,4 @@
   </div>
   <div style="float: none; clear:both;"> </div>
 </div>
+    </div>
