--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<div class="card col-md-6 col-md-offset-3">
+<div class="col-md-6 center-block row">
+  <div class="card">
   <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
   <div>
     <%= image_tag @user.profile_picture_url, :class => "user_img" if @user.profile_picture? %>
@@ -19,3 +20,4 @@
   </div>
   <br>
 </div>
+  </div>
