the home page now has multiple pages based on the number of posts

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,6 +9,7 @@
       </div>
     <% end %>
 
+  <% unless @posts.previous_page %>
     <div class="col-md-8 col-md-offset-2 padding-bot">
       <div class="card">
         <h1 class="post_header">$50,000 For 50 Years Fundraiser!</h1>
@@ -24,6 +25,7 @@
         <div class="clear"> </div>
       </div>
     </div>
+  <% end %>
 
     <div class="col-md-8 col-md-offset-2 padding-bot">
     <% @posts.reverse_each do |post| %>
@@ -40,4 +42,17 @@
         </div>
     <% end %>
     </div>
+</div>
+<div class="col-md-6 center-block">
+  <div align="center">
+    <h3>
+  <% if @posts.previous_page %>
+      <%= link_to "< Previous", params.merge(:page => @posts.previous_page) %>
+  <% end %>
+  Page <%= @posts.current_page %> of <%= @posts.total_pages %>
+  <% if @posts.next_page %>
+      <%= link_to "Next >", params.merge(:page => @posts.next_page) %>
+  <% end %>
+    </h3>
+  </div>
 </div>
