--- a/app/views/alumni_news_letters/show.html.erb
+++ b/app/views/alumni_news_letters/show.html.erb
@@ -1,8 +1,9 @@
+<div class="col-md-6 center-block row">
+  <div class="card" align="center">
 <body style="background-color: #e8ad2e">
 <p id="notice"><%= notice %></p>
-<div class="card col-md-8 col-md-offset-2">
 <%= @alumni_news_letter.news_letter_html.html_safe %>
-  </div>
-
-<%= link_to 'Back', alumni_news_letters_path %>
+<%= link_to 'Back', alumni_news_letters_path, :class => "h1" %>
 </body>
+      </div>
+    </div>
