--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,10 @@
   <p class="alert"><%= alert %></p>
 
   <%= yield %>
-  <!--<div class="row" style="height: 3rem"></div>-->
 
 </body>
 
-<!--<%= render 'layouts/footer' %>-->
+<%= render 'layouts/footer' %>
 </html>
 
 
