--- a/app/views/alumni_news_letters/index.html.erb
+++ b/app/views/alumni_news_letters/index.html.erb
@@ -1,13 +1,21 @@
+
 <div class="col-md-6 center-block row">
+    <div align="center" style="text-align: center">
+      <h3>
+        <% if @alumni_news_letters.previous_page %>
+            <%= link_to "< Previous", params.merge(:page => @alumni_news_letters.previous_page) %>
+        <% end %>
+        News Letter <%= @alumni_news_letters.current_page %> of <%= @alumni_news_letters.total_pages %>
+        <% if @alumni_news_letters.next_page %>
+            <%= link_to "Next >", params.merge(:page => @alumni_news_letters.next_page) %>
+        <% end %>
+      </h3>
+  </div>
   <div class="card">
     <body style="background-color: #e8ad2e">
-<h1 style="text-align: center">Alumni News Letters</h1>
+<h1 style="text-align: center"><%=  @alumni_news_letters.first.released_date.strftime("%B %Y") %></h1>
 
 <div>
-  <h2 style="color: #000000; text-align: center">Past NewsLetters</h2>
-  <% @alumni_news_letters.reverse_each do |alumni_news_letter| %>
-      <p style="text-align: center"><%= link_to alumni_news_letter.released_date.strftime("%B %Y"), alumni_news_letter, class: "nav-item"%></p>
-<% end %>
   <% @alumni_news_letters.reverse_each do |alumni_news_letter| %>
   <%= alumni_news_letter.news_letter_html.html_safe %>
 <% end %>
