--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,21 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
+<div id="wrap">
 <body>
   <%= render 'layouts/header' %>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
+  <div class="container">
   <%= yield %>
+  </div>
 
+
+  <%= render 'layouts/footer' %>
 </body>
-
-<%= render 'layouts/footer' %>
+    </div>
 </html>
 
 
