--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,14 @@
         <span class="icon-bar"></span>
       </button>
       <div class="header_img">
-        <div>
+        <div style="float: left; color: #ffffff">
           <a class="wide img" href="/">
-            <img src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
+            <%= image_tag "phitau_crest.png" %>
           </a>
+        </div>
+        <div style="float: left; color: #ffffff">
+          <h1 style="padding-left: 10px;">Phi Kappa Tau</h1>
+          <h3 style="padding-left: 10px; margin-top: 0px;">Learning Leading Serving</h3>
         </div>
       </div>
       <!--<a class="navbar-brand" href="#">Learning Leading Serving</a>-->
