--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,12 +1,15 @@
 <div class="container">
+  <h1 style="width: 480px; margin: 0 auto;">
+    Frequrently Asked Questions
+  </h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <!-- Nav tabs category -->
     <ul class="nav nav-tabs faq-cat-tabs">
-      <li class="active"><a href="#faq-cat-1" data-toggle="tab">General FAQ</a></li>
-      <li><a href="#faq-cat-2" data-toggle="tab">FAQ about Rushing</a></li>
+      <li class="active"><a href="#faq-cat-1" data-toggle="tab">General</a></li>
+      <li><a href="#faq-cat-2" data-toggle="tab">Rushing</a></li>
       <li><a href="#faq-cat-3" data-toggle="tab">Why Us?</a></li>
-      <li><a href="#faq-cat-3" data-toggle="tab">Benifits of joining</a></li>
+      <li><a href="#faq-cat-3" data-toggle="tab">Benefits</a></li>
     </ul>
 
     <!-- Tab panes -->
