--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 style="width: 480px; margin: 0 auto;">
+  <h1 style="width: 41%; margin: 0 auto;">
     Frequrently Asked Questions
   </h1>
 <div class="row">
@@ -134,7 +134,7 @@
             <div class="panel-heading">
               <a data-toggle="collapse" data-parent="#accordion-cat-1" href="#faq-cat-1-sub-7">
                 <h4 class="panel-title">
-                  What are the purposes and objectives of Phi Kappa Tau?<
+                  What are the purposes and objectives of Phi Kappa Tau?
                   <span class="pull-right"><i class="glyphicon glyphicon-plus"></i></span>
                 </h4>
               </a>
